[package]
name = "weekly-lastfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["attributes", "tokio1"]}
egg-mode = "0.16.0"
logs = "0.5.0"
serde = "1.0.130"
serde_json = "1.0.68"
surf = "2.3.1"
